# minimal_icp

./: .gitignore  .prettierrc  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
docs/: IDLfactory.md  TODO.md  actor_creation_methods_analysis.md  candid_extractor_guide.md  ic_canister_initialization.md  learnings.md
docs/approaches/: 00_vetkeys_applications_reference.md  01_basic_ibe_approach.md  02_encrypted_notes_approach.md  03_password_manager_approach.md  04_timelock_bls_approach.md  05_vetkeys_showcase_analysis.md  06_canister_cloud_approach.md  07_send_file_to_eth_demo_analysis.md  99_user_data_patterns_analysis.md  all_vetkeys_approaches_ultimate.md
scripts/: alice_identity.ts  alice_identity.ts.md  alice_share_ptk.ts  alice_share_ptk.ts.md  auth_greet.ts  encrypted_files_script.ts  general_greet.ts  new.ts  scripts.md  tsconfig.json
scripts/identities/: Bob.json  current.json
src/basic_demo_backend/: Cargo.toml
src/encrypted_files_backend/: Cargo.toml  README.md  frontend.md
src/encrypted_files_backend/src/: lib.rs  lib.rs.md
src/most_minimal_script_app_backend/: Cargo.toml
src/share_tpk_backend/: Cargo.toml  share_tpk_backend.did
src/share_tpk_backend/src/: lib.rs  lib.rs.md
