[package]
name = "encrypted_files_backend"
authors = ["DFINITY Stiftung"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Encrypted File Sharing based on vetKeys"
repository = "https://github.com/dfinity/vetkeys"
rust-version = "1.75.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.2"
ic-cdk = "0.18.3"
ic-cdk-macros = "0.18.3"
ic-dummy-getrandom-for-wasm = "0.1.0"
ic-stable-structures = "0.6.8"
ic-vetkeys = "0.2.0"
serde = "1.0.217"
serde_cbor = "0.11.2"
