[package]
name = "share_tpk_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.2"
ic-cdk = "0.18.3"
ic-cdk-macros = "0.18.3"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
ic-stable-structures = "0.6.8"
once_cell = "1.19"
